--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vuetify": "^3.7.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
